fix: some side safety work
QuestObjectBase#getTitle & QuestObjectBase#getAltTitle no longer
marked as client only - no reason for them to be, and used on the
server now for undo description reporting

Fixed sidedness problems in ImageClickAction (can be loaded on server)